Эисправление и фиксы + блок helo_desk

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex,nofollow" />
+    <meta name="robots" content="noindex,nofollow,noarchive" />
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
-<!--    <meta name="yandex" content="noindex,nofollow">-->
-<!--    <meta name="googlebot" content="noindex,nofollow">-->
-    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>
+    <meta name="yandex" content="noindex,nofollow,noarchive">
+    <meta name="googlebot" content="noindex,nofollow,noarchive">
+<!--    <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/>-->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
+    <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
+    <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 <!--    <meta name="theme-color" content="#000000"/>-->
 <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
 <!--    <meta name="title" content="Гараж ЦОДД"/>-->
@@ -66,7 +73,7 @@
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/trafifk_menu.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -88,7 +95,7 @@
                         <a class="menu_navigation-link" href="#water_patrol">водный патруль</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/kater.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -154,7 +161,7 @@
                         <div class="main_grid-wrapper">
                             <div class="main_text-1">
                                 <p class="main_info-text">
-                                    Сегодня здесь находится одна из&nbsp;крупнейших в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ-проектами
+                                    Сегодня здесь находится одна из&nbsp;крупнейших в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ&nbsp;-&nbsp;проектами
                                 </p>
                             </div>
                             <div class="main_text-2">
@@ -216,7 +223,7 @@
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Пикап (Volkswagen Amarok)</p>
+                                            <p class="slid_info-text">Пикап</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -238,7 +245,7 @@
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Фургон (Ford Transit)</p>
+                                            <p class="slid_info-text">Фургон</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -615,7 +622,7 @@
                                     </div>
                                     <div class="slid_info">
                                         <p class="slider-text">
-                                            Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен.
+                                            Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для&nbsp;специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен.
                                         </p>
                                     </div>
                                 </div>
@@ -636,8 +643,8 @@
                     <div class="water_patrol_card parentCardForLargeMonitor">
                         <a class="garage_model_card" href="./pages/kater.html">
                             <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/slider/kater.jpg" alt="Катер">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/kater.png" alt="Катер">
+                                <video class="menu_preview-video" src="./img/video/kater.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -693,7 +700,11 @@
                     </div>
                     <div class="driver-3">
                         <p class="driver_text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о&nbsp;неполадках сообщают в&nbsp;ЦОДД.</p>
+                        <p class="driver_text">Каждый экипаж оборудован всем необходимым для помощи.</p>
                     </div>
+<!--                    <div class="сrew">-->
+<!--                        <p class="сrew_text">Каждый экипаж оборудован всем необходимым для помощи.</p>-->
+<!--                    </div>-->
                     <div class="equipment-4">
                         <div class="text">Каждый экипаж оборудован всем необходимым для помощи:</div>
                         <div class="skill-1">
@@ -915,7 +926,7 @@
                     </div>
                     <div class="mobile_text_combo">
                         <p class="mobile_text_combo-text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о&nbsp;неполадках сообщают в&nbsp;ЦОДД.</p>
-                        <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для помощи:</p>
+                        <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для помощи.</p>
                     </div>
 <!--                    <div class="slide-5">-->
 <!--                        <a class="garage_model_card" href="./pages/ford.html">-->
@@ -965,18 +976,42 @@
                             </div>
                         </a>
                     </div>
+                    <div class="slide-moskvich parentCardForLargeMonitor">
+                        <a class="garage_model_card" href="./pages/solaris_two.html">
+                            <div class="slid_img">
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
+                                <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
+                            </div>
+                            <div class="slid_info">
+                                <div class="slid_info-desc">
+                                    <p class="slid_info-title">Служба помощи ЦОДД</p>
+                                    <p class="slid_info-text">Легковая</p>
+                                </div>
+                                <div class="slid_info-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                            <rect width="18" height="18" fill="#D9D9D9"/>
+                                        </mask>
+                                        <g mask="url(#mask0_1137_313)">
+                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="equipment_mobile-slide">
                         <div class="traffic_patrol_slider-wrapper swiper3">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide" href="./pages/ford.html">
+                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
                                     <div class="slid_img">
-                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">
-                                        <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
+                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДДр">
+                                        <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                            <p class="slid_info-text">Служба помощи</p>
+                                            <p class="slid_info-text">Легковая</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -1012,28 +1047,28 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img">
-                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
-                                    </div>
-                                    <div class="slid_info">
-                                        <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Патрульный пикап</p>
-                                        </div>
-                                        <div class="slid_info-link">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                                    <rect width="18" height="18" fill="#D9D9D9"/>
-                                                </mask>
-                                                <g mask="url(#mask0_1137_313)">
-                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
+<!--                                <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
+<!--                                    <div class="slid_img">-->
+<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">-->
+<!--                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>-->
+<!--                                    </div>-->
+<!--                                    <div class="slid_info">-->
+<!--                                        <div class="slid_info-desc">-->
+<!--                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>-->
+<!--                                            <p class="slid_info-text">Патрульный пикап</p>-->
+<!--                                        </div>-->
+<!--                                        <div class="slid_info-link">-->
+<!--                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
+<!--                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
+<!--                                                    <rect width="18" height="18" fill="#D9D9D9"/>-->
+<!--                                                </mask>-->
+<!--                                                <g mask="url(#mask0_1137_313)">-->
+<!--                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
+<!--                                                </g>-->
+<!--                                            </svg>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </a>-->
                             </div>
                             <div class="swiper-pagination3"></div>
                         </div>
@@ -1113,6 +1148,12 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="secure_transportation">
+            <div class="secure_transportation__logo">
+<!--                <img src="" alt="Безопасный транспорт">-->
+            </div>
+            <p class="secure_transportation__text">Сайт разработан Инновационным центром «Безопасный транспорт»</p>
         </div>
     </footer>
 
