--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -5,11 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex,nofollow" />
+    <meta name="robots" content="noindex,nofollow,noarchive"/>
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
-    <!--    <meta name="yandex" content="noindex,nofollow">-->
-    <!--    <meta name="googlebot" content="noindex,nofollow">-->
-    <link rel="icon" href="https://garage-codd.ru/favicon.ico"/>
+        <meta name="yandex" content="noindex,nofollow,noarchive"/>
+        <meta name="googlebot" content="noindex,nofollow,noarchive"/>
+<!--    <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/>-->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
+    <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
+    <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!--    <meta name="theme-color" content="#000000"/>-->
     <!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
     <!--    <meta name="title" content="Гараж ЦОДД"/>-->
@@ -266,27 +273,27 @@
                     <div class="auto_park_slider-wrapper">
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/amarok.png" alt="amarok">
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/ford.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/kater.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/kater.jpg" alt="kater">
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
+                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
 <!--                        <div class="gallery_item active">-->
