--- a/src/index.html
+++ b/src/index.html
@@ -1149,12 +1149,12 @@
                 </div>
             </div>
         </div>
-        <div class="secure_transportation">
+        <a class="secure_transportation" href="https://ictransport.ru/?utm-source=garage_codd">
             <div class="secure_transportation__logo">
-<!--                <img src="" alt="Безопасный транспорт">-->
+                <img src="./img/layout/save_logo.svg" alt="Безопасный транспорт">
             </div>
             <p class="secure_transportation__text">Сайт разработан Инновационным центром «Безопасный транспорт»</p>
-        </div>
+        </a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
