--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -257,7 +257,7 @@
     </div>
 </main>
 
-<!--<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%" id="VectaryIframe" class="moskvich_iframe"></iframe>-->
+<iframe src="https://app.vectary.com/p/7arDxbsHpAKCWD7uxgRqOq" width="100%" height="100%" id="VectaryIframe" class="moskvich_iframe"></iframe>
 <!--<div class="hideARButton"></div>-->
 <div id="overlay"></div>
 
@@ -298,12 +298,12 @@
                         </div>
 <!--                        <div class="gallery_item active">-->
 <!--                            <a class="gallery_item_link" href="#">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/slider/moskvich.png" alt="moskvich">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
 <!--                            </a>-->
 <!--                        </div>-->
 <!--                        <div class="gallery_item">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/slider/velo.png" alt="velo">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
 <!--                            </a>-->
 <!--                        </div>-->
                     </div>
