--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -279,12 +279,12 @@
             </div>
 <!--            <div class="gallery_item">-->
 <!--              <a class="gallery_item_link" href="../pages/moskvich.html">-->
-<!--                <img class="gallery_item-img" src="../img/layout/slider/moskvich.png" alt="moskvich">-->
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
 <!--              </a>-->
 <!--            </div>-->
 <!--            <div class="gallery_item">-->
 <!--              <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                <img class="gallery_item-img" src="../img/layout/slider/velo.png" alt="velo">-->
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
 <!--              </a>-->
 <!--            </div>-->
           </div>
