--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -266,16 +266,16 @@
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
-                        <!--                        <div class="gallery_item">-->
-                        <!--                            <a class="gallery_item_link" href="../pages/moskvich.html">-->
-                        <!--                                <img class="gallery_item-img" src="../img/layout/slider/moskvich.png" alt="moskvich">-->
-                        <!--                            </a>-->
-                        <!--                        </div>-->
-                        <!--                        <div class="gallery_item active">-->
-                        <!--                            <a class="gallery_item_link" href="#">-->
-                        <!--                                <img class="gallery_item-img" src="../img/layout/slider/velo.png" alt="velo">-->
-                        <!--                            </a>-->
-                        <!--                        </div>-->
+<!--                        <div class="gallery_item">-->
+<!--                            <a class="gallery_item_link" href="../pages/moskvich.html">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                        <div class="gallery_item active">-->
+<!--                            <a class="gallery_item_link" href="#">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
+<!--                            </a>-->
+<!--                        </div>-->
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
