new logo add 360

--- a/src/index.html
+++ b/src/index.html
@@ -573,10 +573,10 @@
                         <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
                     </div>
                     <div class="man_text-7">
-                        <p class="man_text-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен, и&nbsp;может работать как во&nbsp;время стоянки, так и&nbsp;в&nbsp;движении.</p>
+                        <p class="man_text-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен, и&nbsp;может работать как во&nbsp;время стоянки, так&nbsp;и&nbsp;в&nbsp;движении.</p>
                     </div>
                     <div class="man_plus_major_events-8">
-                        <p class="man_plus_major_events-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен, и&nbsp;может работать как во&nbsp;время стоянки, так и&nbsp;в&nbsp;движении.</p>
+                        <p class="man_plus_major_events-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен, и&nbsp;может работать как во&nbsp;время стоянки, так&nbsp;и&nbsp;в&nbsp;движении.</p>
                         <p class="man_plus_major_events-text">Когда в&nbsp;городе проходят крупные мероприятия, и&nbsp;нужна максимальная оперативность, на&nbsp;месте работает мобильный Ситуационный центр. Полный аналог стационарного&nbsp;&mdash; только на&nbsp;колесах.</p>
                     </div>
                     <div class="employ_text">
@@ -672,7 +672,7 @@
                         <p class="water_patrol_history-text">В&nbsp;его задачи входит фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории, оперативное взаимодействие с&nbsp;контрольно-надзорными и&nbsp;правоохранительными органами, проведение профилактических бесед о&nbsp;правилах поведения на&nbsp;воде.</p>
                     </div>
                     <div class="water_patrol_text_1">
-                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще&nbsp;на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                     </div>
                     <div class="water_patrol_text_2">
                         <p class="water_patrol-text">За&nbsp;прошлый летний сезон Водный патруль прошел 18&nbsp;тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100&nbsp;нарушений.</p>
@@ -1149,7 +1149,7 @@
                 </div>
             </div>
         </div>
-        <a class="secure_transportation" href="https://ictransport.ru/?utm-source=garage_codd">
+        <a class="secure_transportation" href="https://ictransport.ru/?utm-source=garage_codd" target="_blank" rel="noopener">
             <div class="secure_transportation__logo">
                 <img src="./img/layout/save_logo.svg" alt="Безопасный транспорт">
             </div>
