--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -290,11 +290,11 @@
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
-<!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/moskvich.html">-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/moskvich.html">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
 <!--                        <div class="gallery_item">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
