--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -301,11 +301,11 @@
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
-<!--                        <div class="gallery_item active">-->
-<!--                            <a class="gallery_item_link" href="#">-->
+                        <div class="gallery_item active">
+                            <a class="gallery_item_link" href="#">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
 <!--                        <div class="gallery_item">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
@@ -347,7 +347,7 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/codd_garage/360/transit_green/1.jpg"
+                src="https://coddmac.store/codd_garage/360/transit_green/1.png"
                 crossorigin="anonymous"
                 importance="high"
         />
