--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -296,11 +296,11 @@
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
                             </a>
                         </div>
-<!--                        <div class="gallery_item active">-->
-<!--                            <a class="gallery_item_link" href="#">-->
+                        <div class="gallery_item active">
+                            <a class="gallery_item_link" href="#">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
 <!--                        <div class="gallery_item">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
